[update] finished task: insert painting in scene

--- a/index.css
+++ b/index.css
@@ -17,8 +17,8 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-
+/* 
 .card img[id^="image-scene"] {
   width: 250px;
   height: 130px;
-}
+} */
